# spark

./: docker-compose.yml  pyproject.toml  requirements.txt
data/delta/agreement/: .part-00000-ca09e19a-48a3-40b9-a614-1c1193b5e782-c000.parquet.crc  .part-00001-0940a9a6-4fd3-422f-aa91-ecf452f39d3f-c000.parquet.crc  .part-00002-163cd041-67ba-446a-84ab-80997ca7afee-c000.parquet.crc  .part-00003-86040291-7873-43e2-ad0a-bea6d89b31ff-c000.parquet.crc  .part-00004-4e39b850-cd53-4f6a-b821-5e33ca98eadf-c000.parquet.crc  .part-00005-188e7e05-aa5f-4605-a7e4-381687b16c0f-c000.parquet.crc  .part-00006-cf3f0866-57d4-47f7-8bf8-a0d239bb92e0-c000.parquet.crc  .part-00007-817b680d-8776-4f55-9ee5-379df54cb405-c000.parquet.crc  .part-00008-5200457e-0172-412e-8f33-0cc5ba062994-c000.parquet.crc  .part-00009-dee3009a-d8e4-453c-926c-61490aae9be9-c000.parquet.crc  .part-00010-0193b458-afd8-41d3-aca3-f2eda4536f64-c000.parquet.crc  .part-00011-c370bec2-1b05-4c1f-8ffe-0f71d714e997-c000.parquet.crc  part-00000-ca09e19a-48a3-40b9-a614-1c1193b5e782-c000.parquet  part-00001-0940a9a6-4fd3-422f-aa91-ecf452f39d3f-c000.parquet  part-00002-163cd041-67ba-446a-84ab-80997ca7afee-c000.parquet  part-00003-86040291-7873-43e2-ad0a-bea6d89b31ff-c000.parquet  part-00004-4e39b850-cd53-4f6a-b821-5e33ca98eadf-c000.parquet  part-00005-188e7e05-aa5f-4605-a7e4-381687b16c0f-c000.parquet  part-00006-cf3f0866-57d4-47f7-8bf8-a0d239bb92e0-c000.parquet  part-00007-817b680d-8776-4f55-9ee5-379df54cb405-c000.parquet  (+4 more)
docker/: Dockerfile
src/: aggregate.py  gold.py  pipeline.py  pysql.py
(+2498 files in other folders)
